--- a/portfolio.html
+++ b/portfolio.html
@@ -260,7 +260,7 @@
 
 <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
   <div class="portfolio-list col-12 float-left">
-    <a href="portfolio-beacon.html">
+    <a href="portfolio-greentree.html">
       <div class="col-12 p-0 portfolio-image-container">
   <img src="assets/images/portfolio/greentree.png" alt="#">
   </div>
