--- a/portfolio-piazza.html
+++ b/portfolio-piazza.html
@@ -250,8 +250,6 @@
 </script>
 -->
 
- <script src="js/grid.js"></script>
-
 <script>
 function myFunction() {
    var element = document.getElementById("nav");
@@ -259,6 +257,20 @@ function myFunction() {
 }
 </script>
 
+
+<script>
+function subNav() {
+   var element = document.getElementById("subNavMobile");
+   element.classList.toggle("display-toggle-subnav");
+}
+</script>
+
+<script>
+function subNav1() {
+   var element = document.getElementById("subNavMobile1");
+   element.classList.toggle("display-toggle-subnav1");
+}
+</script>
 <!-- END DROPDOWN MENU SCRIPT -->
 
     <!-- Optional JavaScript; choose one of the two! -->
