--- a/development.html
+++ b/development.html
@@ -265,12 +265,25 @@ We are reimagining the role that a workplace plays in the world so that it can w
 </script>
 -->
 
- <script src="js/grid.js"></script>
-
 <script>
 function myFunction() {
    var element = document.getElementById("nav");
    element.classList.toggle("display-toggle");
+}
+</script>
+
+
+<script>
+function subNav() {
+   var element = document.getElementById("subNavMobile");
+   element.classList.toggle("display-toggle-subnav");
+}
+</script>
+
+<script>
+function subNav1() {
+   var element = document.getElementById("subNavMobile1");
+   element.classList.toggle("display-toggle-subnav1");
 }
 </script>
 
