--- a/portfolio-eqt.html
+++ b/portfolio-eqt.html
@@ -247,12 +247,25 @@ EQT Plaza is a distinctive, Class A tower in downtown Pittsburgh. The 32-story, 
 </script>
 -->
 
- <script src="js/grid.js"></script>
-
 <script>
 function myFunction() {
    var element = document.getElementById("nav");
    element.classList.toggle("display-toggle");
+}
+</script>
+
+
+<script>
+function subNav() {
+   var element = document.getElementById("subNavMobile");
+   element.classList.toggle("display-toggle-subnav");
+}
+</script>
+
+<script>
+function subNav1() {
+   var element = document.getElementById("subNavMobile1");
+   element.classList.toggle("display-toggle-subnav1");
 }
 </script>
 
