--- a/portfolio-foster-zero.html
+++ b/portfolio-foster-zero.html
@@ -255,12 +255,25 @@ This office building has had $2.2 million exterior and interior renovations took
 </script>
 -->
 
- <script src="js/grid.js"></script>
-
 <script>
 function myFunction() {
    var element = document.getElementById("nav");
    element.classList.toggle("display-toggle");
+}
+</script>
+
+
+<script>
+function subNav() {
+   var element = document.getElementById("subNavMobile");
+   element.classList.toggle("display-toggle-subnav");
+}
+</script>
+
+<script>
+function subNav1() {
+   var element = document.getElementById("subNavMobile1");
+   element.classList.toggle("display-toggle-subnav1");
 }
 </script>
 
