--- a/portfolio-smithfield.html
+++ b/portfolio-smithfield.html
@@ -238,12 +238,25 @@ Premium Downtown Pittsburgh site. Signage and corporate branding available. Exce
 </script>
 -->
 
- <script src="js/grid.js"></script>
-
 <script>
 function myFunction() {
    var element = document.getElementById("nav");
    element.classList.toggle("display-toggle");
+}
+</script>
+
+
+<script>
+function subNav() {
+   var element = document.getElementById("subNavMobile");
+   element.classList.toggle("display-toggle-subnav");
+}
+</script>
+
+<script>
+function subNav1() {
+   var element = document.getElementById("subNavMobile1");
+   element.classList.toggle("display-toggle-subnav1");
 }
 </script>
 
