--- a/team.html
+++ b/team.html
@@ -327,12 +327,25 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 </script>
 -->
 
- <script src="js/grid.js"></script>
-
 <script>
 function myFunction() {
    var element = document.getElementById("nav");
    element.classList.toggle("display-toggle");
+}
+</script>
+
+
+<script>
+function subNav() {
+   var element = document.getElementById("subNavMobile");
+   element.classList.toggle("display-toggle-subnav");
+}
+</script>
+
+<script>
+function subNav1() {
+   var element = document.getElementById("subNavMobile1");
+   element.classList.toggle("display-toggle-subnav1");
 }
 </script>
 
