--- a/portfolio.html
+++ b/portfolio.html
@@ -232,7 +232,7 @@
 
     <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
       <div class="portfolio-list col-12 float-left">
-        <a href="portfolio-smithfiel.html">
+        <a href="portfolio-smithfield.html">
           <div class="col-12 p-0 portfolio-image-container">
       <img src="assets/images/portfolio/first.png" alt="#">
       </div>
@@ -264,7 +264,7 @@
       <div class="col-12 p-0 portfolio-image-container">
   <img src="assets/images/portfolio/greentree.png" alt="#">
   </div>
-<h3>GREENTREE PRIMARY CARE FACILITY</h3>
+<h3>GREENTREE PRIMARY CARE CENTER</h3>
 <p>Greentree</p>
 </a>
 </div>
@@ -274,12 +274,12 @@
 
 <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
   <div class="portfolio-list col-12 float-left">
-    <a href="portfolio-beacon.html">
+    <a href="portfolio-industry-drive.html">
       <div class="col-12 p-0 portfolio-image-container">
   <img src="assets/images/portfolio/industry.png" alt="#">
   </div>
 <h3>INDUSTRY DRIVE</h3>
-<p>Greentree</p>
+<p>Findlay Township</p>
 </a>
 </div>
 </li>
@@ -289,12 +289,12 @@
 
 <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
   <div class="portfolio-list col-12 float-left">
-    <a href="portfolio-beacon.html">
+    <a href="portfolio-stealth.html">
       <div class="col-12 p-0 portfolio-image-container">
   <img src="assets/images/portfolio/stealth.png" alt="#">
   </div>
 <h3>STEALTH</h3>
-<p>Greentree</p>
+<p>Southpointe</p>
 </a>
 </div>
 </li>
