--- a/portfolio-stealth.html
+++ b/portfolio-stealth.html
@@ -95,10 +95,10 @@
         <span class="top"></span>
 
 
-<img src="assets/images/portfolio/greentree/greentree.png" alt="#" class="bottom">
+<img src="assets/images/portfolio/stealth/stealth.png" alt="#" class="middle">
 
 
-<h1 class="col-10 offset-1"><span class="portfolio-delay-1">GREENTREE</span><br><span class="portfolio-delay-2">PRIMARY CARE</span><br><span class="turquoise-underline portfolio-delay-3">CENTER</span></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1">INDUSTRY</span><br><span class="turquoise-underline portfolio-delay-2">DRIVE</span><br></h1>
         </section>
 
 
@@ -114,17 +114,38 @@
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
 
   </div>
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img src="assets/images/portfolio/greentree/greentree-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/stealth/stealth-2.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/greentree/greentree.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/stealth/stealth-3.png" class="d-block w-100" alt="...">
     </div>
+
+    <div class="carousel-item">
+      <img src="assets/images/portfolio/stealth/stealth.png" class="d-block w-100" alt="...">
+    </div>
+
+    <div class="carousel-item">
+      <img src="assets/images/portfolio/stealth/stealth-4.png" class="d-block w-100" alt="...">
+    </div>
+
+    <div class="carousel-item">
+      <img src="assets/images/portfolio/stealth/stealth-5.png" class="d-block w-100" alt="...">
+    </div>
+
+    <div class="carousel-item">
+      <img src="assets/images/portfolio/stealth/stealth-6.png" class="d-block w-100" alt="...">
+    </div>
+
 
 
 
@@ -147,18 +168,19 @@
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1">
-    GREENTREE PRIMARY<br>
-<span class="green-underline">CARE CENTER</span></h2>
-<h3 class="col-10 offset-1">Greentree | 34,077 SF</h3>
+    INDUSTRY<br>
+<span class="green-underline">DRIVE</span></h2>
+<h3 class="col-10 offset-1">Findlay Township | 60,256 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-969 Greentree Rd is Situated Along I-376. High Visibility With 77,000 Vehicles Per Day. Parkway Signage Available. Free Plentiful Parking. Walkability to retail- Starbucks, Olive Garden, Einstein Bros, Verizon & FedEx. Minutes from Downtown. Large open lobby areas. Direct accessibility to The Pittsburgh International Airport. 24/7 Maintenance. Sustainably managed by Class-G.
+Check back for details.
 </p>
+
 
 <div class="link-container col-10 offset-1">
 
-  <a href="https://looplink.burnsscalorealestate.com/Listing/969-Greentree-Rd-Pittsburgh-PA/9339675/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+  <a href="https://looplink.burnsscalorealestate.com/Listing/400-Industry-Dr-Pittsburgh-PA/18335563/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
