--- a/portfolio-beacon-2.html
+++ b/portfolio-beacon-2.html
@@ -99,7 +99,7 @@
 
 
 
-<h1 class="col-10 offset-1"><span class="portfolio-delay-1 turquoise-underline">BEACON I</span></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1 turquoise-underline">BEACON II</span></h1>
         </section>
 
 
