--- a/team-brokerage.html
+++ b/team-brokerage.html
@@ -104,19 +104,21 @@
 
 
 
-  <section class="featured-projects col-10 col-md-10 col-lg-6 offset-lg-3 offset-1" id="leadership">
+  <section class="featured-projects col-10 col-md-10 col-xl-8 offset-xl-2 offset-1" id="leadership">
 
     <p class="small-headline col-6">
     BROKERAGE
     </p>
 
-  <div class="container-p col-12 col-md-4 col-lg-4 float-left">
-    <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/victor.png" alt="#" class="col-12">
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/brokerage/victor.png" alt="#" class="col-12">
     <div class="name-container">
     <h4>Victor Konno</h4>
     <h5>Leasing Specialist</h5>
   </div>
+
+
 
     <ul>
       <li><a href="mailto:vkonno@burnsscalo.com">vkonno@burnsscalo.com</a></li>
@@ -130,9 +132,11 @@
     </div>
 
 
-  <div class="container-p col-12 col-md-4 col-lg-4 float-left">
-    <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/shannon.png" alt="#" class="col-12">
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/brokerage/shannon.png" alt="#" class="col-12">
       <div class="name-container">
     <h4>Shannon McGuire</h4>
     <h5>Leasing Specialist</h5>
@@ -149,9 +153,11 @@
     </div>
     </div>
 
-  <div class="container-p col-12 col-md-4 col-lg-4 float-left">
-    <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/ruby.png" alt="#" class="col-12">
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/brokerage/ruby.png" alt="#" class="col-12">
       <div class="name-container">
     <h4>Ruby Scalo</h4>
     <h5>Leasing Specialist</h5>
@@ -169,6 +175,92 @@
     </div>
     </div>
 
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/brokerage/pamela.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Pamela Austin</h4>
+    <h5>Leasing Specialist</h5>
+  </div>
+
+    <ul>
+      <li><a href="mailto:vkonno@burnsscalo.com">vkonno@burnsscalo.com</a></li>
+      <li>O: <a href="#">724.622.2756</a></li>
+      <li><a href="#">LinkedIn</a></li>
+
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/brokerage/john.png" alt="#" class="col-12">
+      <div class="name-container">
+    <h4>Shannon McGuire</h4>
+    <h5>Leasing Specialist</h5>
+  </div>
+
+    <ul>
+      <li><a href="mailto:smcguire@burnsscalo.com">smcguire@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.458.6204</a></li>
+      <li>C: <a href="#">412.266.4417</a></li>
+      <li><a href="#">LinkedIn</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/brokerage/kelley.png" alt="#" class="col-12">
+      <div class="name-container">
+    <h4>Ruby Scalo</h4>
+    <h5>Leasing Specialist</h5>
+  </div>
+
+    <ul>
+      <li><a href="mailto:rscalo@burnsscalo.com">rscalo@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.250.3271</a></li>
+      <li>C: <a href="#">412.736.5157</a></li>
+      <li><a href="#">LinkedIn</a></li>
+
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/brokerage/greg.png" alt="#" class="col-12">
+      <div class="name-container">
+    <h4>Greg Schuster</h4>
+    <h5>Leasing Specialist</h5>
+  </div>
+
+    <ul>
+      <li><a href="mailto:rscalo@burnsscalo.com">rscalo@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.250.3271</a></li>
+      <li>C: <a href="#">412.736.5157</a></li>
+      <li><a href="#">LinkedIn</a></li>
+
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
 
 
 
