--- a/team-brokerage.html
+++ b/team-brokerage.html
@@ -90,7 +90,7 @@
           </nav>
 
 
-<div class="scroll-container col-12 p-0" id="what-we-do">
+<div class="col-12 p-0" id="what-we-do">
 
 
 
@@ -100,15 +100,41 @@
 
 
 
+<div class="col-12" id="brokerage">
 
 
 
-
-  <section class="featured-projects col-10 col-md-10 col-xl-8 offset-xl-2 offset-1" id="leadership">
+  <div class="featured-projects col-10 col-md-10 col-xl-8 offset-xl-2 offset-1" id="leadership">
 
     <p class="small-headline col-6">
     BROKERAGE
     </p>
+
+
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+      <img src="assets/images/team/scott.png" alt="#" class="col-12">
+        <div class="name-container">
+      <h4>Scott DiGuglielmo</h4>
+      <h5>Director of Agency Brokerage</h5>
+    </div>
+
+      <ul>
+        <li><a href="mailto:sdiguglielmo@burnsscalo.com">sdiguglielmo@burnsscalo.com</a></li>
+        <li>O: <a href="#">724.984.6251</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li class="bio"><a href="#">Read Bio</a></li>
+      </ul>
+      <div class="background-white">
+      </div>
+      </div>
+      </div>
+
+
+
+
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
@@ -117,8 +143,6 @@
     <h4>Victor Konno</h4>
     <h5>Leasing Specialist</h5>
   </div>
-
-
 
     <ul>
       <li><a href="mailto:vkonno@burnsscalo.com">vkonno@burnsscalo.com</a></li>
@@ -182,13 +206,14 @@
     <img src="assets/images/team/brokerage/pamela.png" alt="#" class="col-12">
     <div class="name-container">
     <h4>Pamela Austin</h4>
-    <h5>Leasing Specialist</h5>
+    <h5>Brand Ambassador</h5>
   </div>
 
     <ul>
-      <li><a href="mailto:vkonno@burnsscalo.com">vkonno@burnsscalo.com</a></li>
-      <li>O: <a href="#">724.622.2756</a></li>
-      <li><a href="#">LinkedIn</a></li>
+      <li><a href="mailto:paustin@burnsscalo.com">paustin@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.458.6336</a></li>
+      <li>C: <a href="#">773.383.7094</a></li>
+
 
     </ul>
     <div class="background-white">
@@ -202,15 +227,14 @@
       <div class="portfolio-list col-12 float-left">
     <img src="assets/images/team/brokerage/john.png" alt="#" class="col-12">
       <div class="name-container">
-    <h4>Shannon McGuire</h4>
-    <h5>Leasing Specialist</h5>
+    <h4>John Eliopoulos</h4>
+    <h5>Senior Brokerage Advisor</h5>
   </div>
 
     <ul>
       <li><a href="mailto:smcguire@burnsscalo.com">smcguire@burnsscalo.com</a></li>
-      <li>O: <a href="#">412.458.6204</a></li>
-      <li>C: <a href="#">412.266.4417</a></li>
-      <li><a href="#">LinkedIn</a></li>
+      <li>C: <a href="#">412.613.6229</a></li>
+
     </ul>
     <div class="background-white">
     </div>
@@ -223,15 +247,14 @@
       <div class="portfolio-list col-12 float-left">
     <img src="assets/images/team/brokerage/kelley.png" alt="#" class="col-12">
       <div class="name-container">
-    <h4>Ruby Scalo</h4>
-    <h5>Leasing Specialist</h5>
+    <h4>Kelley Hoover Heckathorne</h4>
+    <h5>Director of Brokerage Services</h5>
   </div>
 
     <ul>
-      <li><a href="mailto:rscalo@burnsscalo.com">rscalo@burnsscalo.com</a></li>
-      <li>O: <a href="#">412.250.3271</a></li>
-      <li>C: <a href="#">412.736.5157</a></li>
-      <li><a href="#">LinkedIn</a></li>
+      <li><a href="mailto:khoover@burnsscalo.com">khoover@burnsscalo.com</a></li>
+      <li>C: <a href="#">412.670.4248</a></li>
+
 
     </ul>
     <div class="background-white">
@@ -246,15 +269,15 @@
       <div class="portfolio-list col-12 float-left">
     <img src="assets/images/team/brokerage/greg.png" alt="#" class="col-12">
       <div class="name-container">
-    <h4>Greg Schuster</h4>
+    <h4>Gregory Schuster</h4>
     <h5>Leasing Specialist</h5>
   </div>
 
     <ul>
-      <li><a href="mailto:rscalo@burnsscalo.com">rscalo@burnsscalo.com</a></li>
-      <li>O: <a href="#">412.250.3271</a></li>
-      <li>C: <a href="#">412.736.5157</a></li>
-      <li><a href="#">LinkedIn</a></li>
+      <li><a href="mailto:gschuster@burnsscalo.com">gschuster@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.250.3293</a></li>
+      <li>C: <a href="#">412.670.9363</a></li>
+
 
     </ul>
     <div class="background-white">
@@ -266,8 +289,8 @@
 
 
 
-  </section>
-
+  </div>
+</div>
 
 
 
