--- a/team.html
+++ b/team.html
@@ -211,7 +211,7 @@
   <img src="assets/images/team/scott.png" alt="#" class="col-12">
     <div class="name-container">
   <h4>Scott DiGuglielmo</h4>
-  <h5>Agency Brokerage Director</h5>
+  <h5>Director of Agency Brokerage</h5>
 </div>
 
   <ul>
