--- a/team-development.html
+++ b/team-development.html
@@ -89,28 +89,21 @@
 
           </nav>
 
-<div class="scroll-container col-12 p-0" id="what-we-do">
+          <div class="col-12" id="brokerage">
+
+
+
+            <div class="featured-projects col-10 col-md-10 col-xl-8 offset-xl-2 offset-1" id="leadership">
+
+              <p class="small-headline col-6">
+              DEVELOPMENT
+              </p>
 
 
 
 
-
-
-
-
-
-
-
-
-
-  <section class="featured-projects col-10 col-md-10 col-lg-8 offset-lg-2 offset-1" id="leadership">
-
-    <p class="small-headline col-6">
-    DEVELOPMENT
-    </p>
-
-  <div class="container-p col-12 col-md-4 col-lg-3 float-left">
-    <div class="portfolio-list col-12 float-left">
+              <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+                <div class="portfolio-list col-12 float-left">
     <img src="assets/images/team/braden.png" alt="#" class="col-12">
     <div class="name-container">
     <h4>Braden Rowse, Jr.</h4>
@@ -189,7 +182,89 @@
 
 
 
-  </section>
+
+      <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+        <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/braden.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Braden Rowse, Jr.</h4>
+    <h5>Senior Project Manager</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:browse@burnsscalo.com">browse@burnsscalo.com</a></li>
+    <li>O: <a href="#">724.513.5457</a></li>
+    <li><a href="#">LinkedIn</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/pj.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>PJ Flaherty</h4>
+    <h5>Controller</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:pflaherty@burnsscalo.com">pflaherty@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.862.7125</a></li>
+    <li>C: <a href="#">412.510.7525</a></li>
+    <li><a href="#">LinkedIn</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/tj.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>TJ Mangis</h4>
+    <h5>Health & Safety Manager</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:tmangis@burnsscalo.com">tmangis@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.510.7525</a></li>
+    <li>C: <a href="#">412.862.7125</a></li>
+    <li><a href="#">LinkedIn</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/travis.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Travis Raught</h4>
+    <h5>Senior Project Manager</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:traught@burnsscalo.com">traught@burnsscalo.com</a></li>
+    <li>C: <a href="#">724.513.4257</a></li>
+    <li><a href="#">LinkedIn</a></li>
+    <li class="bio"><a href="#">Read Bio</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+  </div>
+</div>
 
 
 
@@ -231,7 +306,7 @@
 
             </footer>
           </section>
- </div>
+
 
 
 <!-- DROPDOWN MENU SCRIPT
