--- a/team.html
+++ b/team.html
@@ -169,7 +169,7 @@
   <img src="assets/images/team/steve.png" alt="#" class="col-12">
     <div class="name-container">
   <h4>Steve Whittingham</h4>
-  <h5>President & CEO</h5>
+  <h5>Director of Development </h5>
 </div>
 
   <ul>
