--- a/team-development.html
+++ b/team-development.html
@@ -100,6 +100,26 @@
               </p>
 
 
+              <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+                <div class="portfolio-list col-12 float-left">
+                <img src="assets/images/team/steve.png" alt="#" class="col-12">
+                  <div class="name-container">
+                <h4>Steve Whittingham</h4>
+                <h5>Director of Development </h5>
+              </div>
+
+                <ul>
+                  <li><a href="mailto:swhittingham@burnsscalo.com">swhittingham@burnsscalo.com</a></li>
+                  <li>O: <a href="#">724.494.7066</a></li>
+                  <li><a href="#">LinkedIn</a></li>
+                  <li class="bio"><a href="#">Read Bio</a></li>
+                </ul>
+                <div class="background-white">
+                </div>
+                </div>
+                </div>
+
+
 
 
               <div class="container-p col-12 col-md-4 col-xl-3 float-left">
@@ -113,7 +133,6 @@
     <ul>
       <li><a href="mailto:browse@burnsscalo.com">browse@burnsscalo.com</a></li>
       <li>O: <a href="#">724.513.5457</a></li>
-      <li><a href="#">LinkedIn</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -123,17 +142,15 @@
 
   <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/pj.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/chris.png" alt="#" class="col-12">
       <div class="name-container">
-    <h4>PJ Flaherty</h4>
-    <h5>Controller</h5>
+    <h4>Chris Pogue-Geile</h4>
+    <h5>Project Manager</h5>
   </div>
 
     <ul>
-      <li><a href="mailto:pflaherty@burnsscalo.com">pflaherty@burnsscalo.com</a></li>
-      <li>O: <a href="#">412.862.7125</a></li>
-      <li>C: <a href="#">412.510.7525</a></li>
-      <li><a href="#">LinkedIn</a></li>
+      <li><a href="mailto:cpgeile@burnsscalo.com">cpgeile@burnsscalo.com</a></li>
+      <li>C: <a href="#">412.337.1316</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -152,7 +169,6 @@
       <li><a href="mailto:tmangis@burnsscalo.com">tmangis@burnsscalo.com</a></li>
       <li>O: <a href="#">412.510.7525</a></li>
       <li>C: <a href="#">412.862.7125</a></li>
-      <li><a href="#">LinkedIn</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -172,7 +188,6 @@
       <ul>
         <li><a href="mailto:traught@burnsscalo.com">traught@burnsscalo.com</a></li>
         <li>C: <a href="#">724.513.4257</a></li>
-        <li><a href="#">LinkedIn</a></li>
         <li class="bio"><a href="#">Read Bio</a></li>
       </ul>
       <div class="background-white">
@@ -185,16 +200,15 @@
 
       <div class="container-p col-12 col-md-4 col-xl-3 float-left">
         <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/braden.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
     <div class="name-container">
-    <h4>Braden Rowse, Jr.</h4>
-    <h5>Senior Project Manager</h5>
+    <h4>Nate Carr</h4>
+    <h5>Assistant Project Manager</h5>
     </div>
 
     <ul>
-    <li><a href="mailto:browse@burnsscalo.com">browse@burnsscalo.com</a></li>
-    <li>O: <a href="#">724.513.5457</a></li>
-    <li><a href="#">LinkedIn</a></li>
+    <li><a href="mailto:njcarr@burnsscalo.com">njcarr@burnsscalo.com</a></li>
+    <li>C: <a href="#">412.577.8909</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -204,17 +218,16 @@
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/pj.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
     <div class="name-container">
-    <h4>PJ Flaherty</h4>
-    <h5>Controller</h5>
+    <h4>Nick Carr</h4>
+    <h5>Assistant Project Manager</h5>
     </div>
 
     <ul>
-    <li><a href="mailto:pflaherty@burnsscalo.com">pflaherty@burnsscalo.com</a></li>
-    <li>O: <a href="#">412.862.7125</a></li>
-    <li>C: <a href="#">412.510.7525</a></li>
-    <li><a href="#">LinkedIn</a></li>
+    <li><a href="mailto:ncarr@burnsscalo.com">ncarr@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.250.3000</a></li>
+    <li>C: <a href="#">412.298.4677</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -223,17 +236,15 @@
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/tj.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
     <div class="name-container">
-    <h4>TJ Mangis</h4>
-    <h5>Health & Safety Manager</h5>
+    <h4>Ryan Crouse</h4>
+    <h5>Project Manager</h5>
     </div>
 
     <ul>
-    <li><a href="mailto:tmangis@burnsscalo.com">tmangis@burnsscalo.com</a></li>
-    <li>O: <a href="#">412.510.7525</a></li>
-    <li>C: <a href="#">412.862.7125</a></li>
-    <li><a href="#">LinkedIn</a></li>
+    <li><a href="mailto:rcrouse@burnsscalo.com">rcrouse@burnsscalo.com</a></li>
+    <li>C: <a href="#">412.327.0695</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -244,17 +255,16 @@
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/travis.png" alt="#" class="col-12">
+    <img src="assets/images/team/development/mary.png" alt="#" class="col-12">
     <div class="name-container">
-    <h4>Travis Raught</h4>
-    <h5>Senior Project Manager</h5>
+    <h4>Mary Ann Dumaret</h4>
+    <h5>Development Coordinator</h5>
     </div>
 
     <ul>
     <li><a href="mailto:traught@burnsscalo.com">traught@burnsscalo.com</a></li>
-    <li>C: <a href="#">724.513.4257</a></li>
-    <li><a href="#">LinkedIn</a></li>
-    <li class="bio"><a href="#">Read Bio</a></li>
+    <li>O: <a href="#">412.250.3268</a></li>
+    <li>C: <a href="#">412.651.0959</a></li>
     </ul>
     <div class="background-white">
     </div>
