--- a/team-development.html
+++ b/team-development.html
@@ -273,6 +273,105 @@
 
 
 
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Tom Feldmeier</h4>
+    <h5>Assistant Project Manager</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:tfeldmeier@burnsscalo.com">tfeldmeier@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.250.3000 ext. 209</a></li>
+    <li>C: <a href="#">724.650.6700</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Nick Hineman</h4>
+    <h5>Assistant Project Manager</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:nhineman@burnsscalo.com">nhineman@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.250.3000 ext 223</a></li>
+    <li>C: <a href="#">724.650.5919</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Joshua Hoskinson</h4>
+    <h5>Assistant Project Manager</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:jhoskinson@burnsscalo.com">jhoskinson@burnsscalo.com</a></li>
+    <li>C: <a href="#">412.480.5781</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Justin Nobilese</h4>
+    <h5>Superintendent</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:jnobilese@burnsscalo.com">jnobilese@burnsscalo.com</a></li>
+    <li>C: <a href="#">724.882.5021</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Sandy Rollo-DeLong</h4>
+    <h5>Project Accountant</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:jnobilese@burnsscalo.com">jnobilese@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.450.6206</a></li>
+    <li>C: <a href="#">412.736.8496</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
   </div>
 </div>
 
