--- a/team-management.html
+++ b/team-management.html
@@ -89,39 +89,69 @@
 
           </nav>
 
-<div class="scroll-container col-12 p-0" id="what-we-do">
+          <div class="col-12" id="brokerage">
+
+
+
+            <div class="featured-projects col-10 col-md-10 col-xl-8 offset-xl-2 offset-1" id="leadership">
+
+              <p class="small-headline col-6">
+              DEVELOPMENT
+              </p>
+
+
+              <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+                <div class="portfolio-list col-12 float-left">
+                <img src="assets/images/team/bob.png" alt="#" class="col-12">
+                <div class="name-container">
+              <h4>Bob Fittipaldo</h4>
+              <h5>Director of Facilities</h5>
+              </div>
+
+              <ul>
+                <li><a href="mailto:bfittipaldo@burnsscalo.com">bfittipaldo@burnsscalo.com</a></li>
+                <li>O: <a href="#">412.297.3535</a></li>
+                <li><a href="#">LinkedIn</a></li>
+                <li class="bio"><a href="#">Read Bio</a></li>
+              </ul>
+              <div class="background-white">
+              </div>
+              </div>
+              </div>
+
+
+
+              <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+                <div class="portfolio-list col-12 float-left">
+                <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+                  <div class="name-container">
+                <h4>Gena Batts</h4>
+                <h5>Day Porter</h5>
+              </div>
+
+                <ul>
+                  <li><a href="mailto:lbatts@burnsscalo.com">lbatts@burnsscalo.com</a></li>
+                  <li>C: <a href="#">412.780.9627</a></li>
+                </ul>
+                <div class="background-white">
+                </div>
+                </div>
+                </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-  <section class="featured-projects col-10 col-md-10 col-lg-8 offset-lg-3 offset-1" id="leadership">
-
-    <p class="small-headline col-6">
-    MANAGEMENT
-    </p>
-
-  <div class="container-p col-12 col-md-4 col-lg-3 float-left">
-    <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/braden.png" alt="#" class="col-12">
+              <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+                <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
     <div class="name-container">
-    <h4>Kelly Mihalik</h4>
-    <h5>Client Experience Specialist</h5>
+    <h4>Dana Broderick</h4>
+    <h5>Staff Accountant</h5>
   </div>
 
     <ul>
-      <li><a href="#">email address</a></li>
-      <li><a href="#">phone number</a></li>
-      <li><a href="#">LinkedIn</a></li>
-      <li class="bio"><a href="#">Read Bio</a></li>
+      <li><a href="mailto:demph@burnsscalo.com">demph@burnsscalo.com</a></li>
+      <li>C: <a href="#">412.906.0104</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -131,36 +161,196 @@
 
   <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/pj.png" alt="#" class="col-12">
+    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
       <div class="name-container">
+    <h4>Jake Bywalski</h4>
+    <h5>Brokerage Analyst</h5>
+  </div>
+
+    <ul>
+      <li><a href="mailto:jbywalski@burnsscalo.com">jbywalski@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.458.6331</a></li>
+      <li>C: <a href="#">205.475.5366</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+
+
+  <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+      <div class="name-container">
+    <h4>Nick Carangio</h4>
+    <h5>Facilities Technician</h5>
+  </div>
+
+    <ul>
+      <li><a href="mailto:ncarangio@burnsscalo.com">ncarangio@burnsscalo.com</a></li>
+      <li>C: <a href="#">412.510.1104</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+      <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+        <div class="name-container">
+      <h4>Natalie Chadwick</h4>
+      <h5>Financial Analyst</h5>
+    </div>
+
+      <ul>
+        <li><a href="mailto:nchadwick@burnsscalo.com">nchadwick@burnsscalo.com</a></li>
+        <li>O: <a href="#">724.579.6899</a></li>
+        <li>C: <a href="#">412.250.3284</a></li>
+      </ul>
+      <div class="background-white">
+      </div>
+      </div>
+      </div>
+
+
+
+
+      <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+        <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Adam Dodson</h4>
+    <h5>Assistant Controller</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:mdumaret@burnsscalo.com">mdumaret@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.250.3285</a></li>
+    <li>C: <a href="#">412.418.2844</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Taylor Edwards</h4>
+    <h5>Staff Accountant</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:tedwards@burnsscalo.com">tedwards@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.458.6205</a></li>
+    <li>C: <a href="#">412.600.3265</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Nick Ferrera</h4>
+    <h5>Facilities Analyst</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:nferrera@burnsscalo.com">nferrera@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.458.6203</a></li>
+    <li>C: <a href="#">973.975.5197</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Anissa Eckert-Fife</h4>
+    <h5>Senior Executive Assistant</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:aeckert@burnsscalo.com">aeckert@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.250.3286</a></li>
+    <li>C: <a href="#">412.906.0086</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Lindsay Files</h4>
+    <h5>Chief Financial Officer </h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:lfiles@burnsscalo.com">lfiles@burnsscalo.com</a></li>
+    <li>C: <a href="#">412.956.4554</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/management/pj.png" alt="#" class="col-12">
+    <div class="name-container">
     <h4>PJ Flaherty</h4>
-    <h5>Leasing Specialist</h5>
-  </div>
+    <h5>Controller</h5>
+    </div>
 
     <ul>
-      <li><a href="#">email address</a></li>
-      <li><a href="#">phone number</a></li>
-      <li><a href="#">LinkedIn</a></li>
-      <li class="bio"><a href="#">Read Bio</a></li>
+    <li><a href="mailto:pflaherty@burnsscalo.com">pflaherty@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.250.3272</a></li>
+    <li>C: <a href="#">412.874.7352</a></li>
     </ul>
     <div class="background-white">
     </div>
     </div>
     </div>
 
-  <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/tj.png" alt="#" class="col-12">
-      <div class="name-container">
-    <h4>Travis Raught</h4>
-    <h5>Leasing Specialist</h5>
-  </div>
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Angela Gillot</h4>
+    <h5>Client Experience Ambassador</h5>
+    </div>
 
     <ul>
-      <li><a href="#">email address</a></li>
-      <li><a href="#">phone number</a></li>
-      <li><a href="#">LinkedIn</a></li>
-      <li class="bio"><a href="#">Read Bio</a></li>
+    <li><a href="mailto:agillot@burnsscalo.com">agillot@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.458.6334</a></li>
+    <li>C: <a href="#">412.720.7123</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -169,7 +359,47 @@
 
 
 
-  </section>
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Justin Nobilese</h4>
+    <h5>Superintendent</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:jnobilese@burnsscalo.com">jnobilese@burnsscalo.com</a></li>
+    <li>C: <a href="#">724.882.5021</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Sandy Rollo-DeLong</h4>
+    <h5>Project Accountant</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:jnobilese@burnsscalo.com">jnobilese@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.450.6206</a></li>
+    <li>C: <a href="#">412.736.8496</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+  </div>
+</div>
 
 
 
@@ -211,7 +441,7 @@
 
             </footer>
           </section>
- </div>
+
 
 
 <!-- DROPDOWN MENU SCRIPT
