--- a/team-management.html
+++ b/team-management.html
@@ -363,13 +363,14 @@
     <div class="portfolio-list col-12 float-left">
     <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
     <div class="name-container">
-    <h4>Justin Nobilese</h4>
-    <h5>Superintendent</h5>
+    <h4>Steven Hunkele</h4>
+    <h5>Senior Facilities Technician</h5>
     </div>
 
     <ul>
-    <li><a href="mailto:jnobilese@burnsscalo.com">jnobilese@burnsscalo.com</a></li>
-    <li>C: <a href="#">724.882.5021</a></li>
+    <li><a href="mailto:shunkele@burnsscalo.com">shunkele@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.458.6331</a></li>
+    <li>C: <a href="#">205.475.5366</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -383,14 +384,13 @@
     <div class="portfolio-list col-12 float-left">
     <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
     <div class="name-container">
-    <h4>Sandy Rollo-DeLong</h4>
-    <h5>Project Accountant</h5>
+    <h4>George Mackulin</h4>
+    <h5>Facilities Technician</h5>
     </div>
 
     <ul>
-    <li><a href="mailto:jnobilese@burnsscalo.com">jnobilese@burnsscalo.com</a></li>
-    <li>O: <a href="#">412.450.6206</a></li>
-    <li>C: <a href="#">412.736.8496</a></li>
+    <li><a href="mailto:gmackulin@burnsscalo.com">gmackulin@burnsscalo.com</a></li>
+    <li>C: <a href="#">412.537.5738</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -398,9 +398,375 @@
     </div>
 
 
-  </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Richard Malter, Jr.</h4>
+    <h5>Facilities Technician</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:rmalter@burnsscalo.com">rmalter@burnsscalo.com</a></li>
+    <li>C: <a href="#">412.926.7171</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Reggie Maness</h4>
+    <h5>Cleaning Operations Supervisor</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:rmaness@burnsscalo.com">rmaness@burnsscalo.com</a></li>
+    <li>C: <a href="#">412.477.5037</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Krystal Marks</h4>
+    <h5>Day Porter</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:kmarks@burnsscalo.com">kmarks@burnsscalo.com</a></li>
+    <li>C: <a href="#">412.913.4425</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Kelly Mihalik</h4>
+<h5>Client Experience Ambassador</h5>
 </div>
 
+<ul>
+<li><a href="mailto:kmihalik@burnsscalo.com">kmihalik@burnsscalo.com</a></li>
+<li>O: <a href="#">412.458.6330</a></li>
+<li>C: <a href="#">724.809.6999</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>BJ Miller</h4>
+<h5>Facilities Technician</h5>
+</div>
+
+<ul>
+<li><a href="mailto:bmiller@burnsscalo.com">bmiller@burnsscalo.com</a></li>
+<li>C: <a href="#">724.825.7209</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Dylan Pounds</h4>
+<h5>Staff Accountant</h5>
+</div>
+
+<ul>
+<li><a href="mailto:dpounds@burnsscalo.com">dpounds@burnsscalo.com</a></li>
+<li>O: <a href="#">412.458.6337</a></li>
+<li>C: <a href="#">724.678.4955</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Tim Quinn</h4>
+<h5>General Counsel</h5>
+</div>
+
+<ul>
+<li><a href="mailto:dpounds@burnsscalo.com">dpounds@burnsscalo.com</a></li>
+<li>O: <a href="#">412.458.6348</a></li>
+<li>C: <a href="#">412.841.9403</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/christie.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Christie Reiber</h4>
+<h5>Chief Investment Officer</h5>
+</div>
+
+<ul>
+<li><a href="mailto:creiber@burnsscalo.com">creiber@burnsscalo.com</a></li>
+<li>O: <a href="#">412.250.3295</a></li>
+<li>C: <a href="#">412.445.5281</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>David Rhodes</h4>
+<h5>Facilities Technician</h5>
+</div>
+
+<ul>
+<li><a href="mailto:drhodes@burnsscalo.com">drhodes@burnsscalo.com</a></li>
+<li>C: <a href="#">412.735.1053</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Richard Romitz</h4>
+<h5>Facilities Technician</h5>
+</div>
+
+<ul>
+<li><a href="mailto:RRomitz@burnsscalo.com">RRomitz@burnsscalo.com</a></li>
+<li>C: <a href="#">412.916.0092</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Jared Schaut</h4>
+<h5>Financial Accountant</h5>
+</div>
+
+<ul>
+<li><a href="mailto:jschaut@burnsscalo.com">jschaut@burnsscalo.com</a></li>
+<li>O: <a href="#">412.458.6332</a></li>
+<li>C: <a href="#">814.594.3187</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Fran Scott</h4>
+<h5>Happiness Chief</h5>
+</div>
+
+<ul>
+<li><a href="mailto:fscott@burnsscalo.com">fscott@burnsscalo.com</a></li>
+<li>C: <a href="#">412.606.2888</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Jimmy Sims</h4>
+<h5>Senior Facility Technician</h5>
+</div>
+
+<ul>
+<li><a href="mailto:jsims@burnsscalo.com">jsims@burnsscalo.com</a></li>
+<li>C: <a href="#">724.747.4735</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Jared Sims</h4>
+<h5>Facilities Technician</h5>
+</div>
+
+<ul>
+<li><a href="mailto:jasims@burnsscalo.com">jasims@burnsscalo.com</a></li>
+<li>C: <a href="#">724.683.9194</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Tim Spina</h4>
+<h5>Senior Facility Technician</h5>
+</div>
+
+<ul>
+<li><a href="mailto:tspina@burnsscalo.com">tspina@burnsscalo.com</a></li>
+<li>C: <a href="#">412.906.0088</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Mike Thomas</h4>
+<h5>Senior Facility Technician</h5>
+</div>
+
+<ul>
+<li><a href="mailto:mthomas@burnsscalo.com">mthomas@burnsscalo.com</a></li>
+<li>C: <a href="#">412.915.8590</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Kelsey Wade</h4>
+<h5>Staff Accountant</h5>
+</div>
+
+<ul>
+<li><a href="mailto:kwade@burnsscalo.com">kwade@burnsscalo.com</a></li>
+<li>O: <a href="#">412.250.3292</a></li>
+<li>C: <a href="#">412.389.0096</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+
+
+
+
+<div class="container-p col-12 col-md-4 col-lg-3 float-left">
+<div class="portfolio-list col-12 float-left">
+<img src="assets/images/team/management/placeholder.png" alt="#" class="col-12">
+<div class="name-container">
+<h4>Ken Wagner</h4>
+<h5>Facilities Technician</h5>
+</div>
+
+<ul>
+<li><a href="mailto:kwagner@burnsscalo.com">kwagner@burnsscalo.com</a></li>
+<li>C: <a href="#">412.334.4325</a></li>
+</ul>
+<div class="background-white">
+</div>
+</div>
+</div>
+
+</div>
+  </div>
 
 
 
